force-app/main/default/objects/Destination__c/Destination__c.object-meta.xml
<CustomObject>
    <label>Destination</label>
    <nameField>
        <label>Destination Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Destinations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>