force-app/main/default/objects/Destination__c/fields/Altitude_Zone__c.field-meta.xml
<CustomField>
    <fullName>Altitude_Zone__c</fullName>
    <label>Altitude Zone</label>
    <length>100</length>
    <type>Text</type>
</CustomField>