force-app/main/default/objects/Destination__c/fields/District__c.field-meta.xml
<CustomField>
    <fullName>District__c</fullName>
    <label>District</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pokhara</fullName>
            </value>
            <value>
                <fullName>Mustang</fullName>
            </value>
            <value>
                <fullName>Illam</fullName>
            </value>
            <value>
                <fullName>Kathmandu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>