force-app/main/default/objects/Destination__c/fields/Highest_Price__c.field-meta.xml
<CustomField>
    <fullName>Highest_Price__c</fullName>
    <label>Highest Price</label>
    <summarizedField>Trek__c.Price__c</summarizedField>
    <summaryForeignKey>Trek__c.Destination__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>