force-app/main/default/objects/Destination__c/fields/Number_Of_Treks__c.field-meta.xml
<CustomField>
    <fullName>Number_Of_Treks__c</fullName>
    <label>Number Of Treks</label>
    <summaryForeignKey>Trek__c.Destination__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>