force-app/main/default/objects/Destination__c/fields/Starting_Price__c.field-meta.xml
<CustomField>
    <fullName>Starting_Price__c</fullName>
    <label>Starting Price</label>
    <summarizedField>Trek__c.Price__c</summarizedField>
    <summaryForeignKey>Trek__c.Destination__c</summaryForeignKey>
    <summaryOperation>min</summaryOperation>
    <type>Summary</type>
</CustomField>