force-app/main/default/objects/Destination__c/validationRules/No_Duplicate_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>No_Duplicate_Name</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(ISNEW()) &amp;&amp; 
Name &lt;&gt; PRIORVALUE(Name) &amp;&amp; 
!ISBLANK(Name) &amp;&amp;
NOT(ISNULL(
  VLOOKUP(
    $ObjectType.Destination__c.Fields.Id,
    $ObjectType.Destination__c.Fields.Name,
    Name
  )
))</errorConditionFormula>
    <errorDisplayField>Name</errorDisplayField>
    <errorMessage>The Destination Already Exists !</errorMessage>
</ValidationRule>